CloudFormation/trunk/WMP-Ecommerce-Containers/template-archive/WMP-Ecomm-VPC.template
{
    "AWSTemplateFormatVersion": "2010-09-09", 
    "Description": "CloudFormation script for CUPS AWS Ecommerceenvironments - building virtual hardware.", 
    "Mappings": {
        "AWSAMI": {
            "ADMIN": {
                "AMI": "ami-672ce210"
            }, 
            "Centos": {
                "AMI": "ami-306dc547"
            }, 
            "NAT": {
                "AMI": "ami-ed352799"
            }
        }, 
        "CUPSSubnetConfig": {
            "CAMFWALL": {
                "CIDR": "192.153.213.50/32"
            }, 
            "CAMINFRA": {
                "CIDR": "131.111.159.0/24"
            }, 
            "CAMPT": {
                "CIDR": "131.111.154.0/24"
            }, 
            "MANILLA1": {
                "CIDR": "121.97.34.10/32"
            }, 
            "MANILLA2": {
                "CIDR": "103.23.193.2/32"
            }, 
            "MANILLA3": {
                "CIDR": "121.97.40.34/32"
            }
        }, 
        "SubnetConfig": {
            "PrivateA": {
                "CIDR": "10.10.21.0/25"
            }, 
            "PrivateB": {
                "CIDR": "10.10.21.128/25"
            }, 
            "PrivateC": {
                "CIDR": "10.10.22.0/25"
            }, 
            "PrivateD": {
                "CIDR": "10.10.22.128/25"
            }, 
            "PublicA": {
                "CIDR": "10.10.20.0/25"
            }, 
            "PublicB": {
                "CIDR": "10.10.20.128/25"
            }, 
            "VPC": {
                "CIDR": "10.10.20.0/22"
            }
        }
    }, 
    "Parameters": {
        "KeyName": {
            "AllowedPattern": "[\\x20-\\x7E]*", 
            "ConstraintDescription": "can contain only ASCII characters.", 
            "Description": "Name of existing SSH Keypair", 
            "MaxLength": "255", 
            "MinLength": "1", 
            "Type": "String"
        }
    }, 
    "Resources": {
        "ADMINSecurityGroup": {
            "Properties": {
                "GroupDescription": "Defines allowed access to the Admin Bastion server", 
                "SecurityGroupEgress": [
                    {}
                ], 
                "SecurityGroupIngress": [
                    {
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "CUPSSubnetConfig", 
                                "CAMINFRA", 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "22", 
                        "IpProtocol": "tcp", 
                        "ToPort": "22"
                    }, 
                    {
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "CUPSSubnetConfig", 
                                "CAMPT", 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "22", 
                        "IpProtocol": "tcp", 
                        "ToPort": "22"
                    }
                ], 
                "Tags": [
                    {
                        "Key": "Environment", 
                        "Value": "Ecommerce"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "PT"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SG"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce Admin Server SG"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::SecurityGroup"
        }, 
        "AdminIPAddress": {
            "DependsOn": "GatewayAttachment", 
            "Properties": {
                "Domain": "vpc", 
                "InstanceId": {
                    "Ref": "AdminServer"
                }
            }, 
            "Type": "AWS::EC2::EIP"
        }, 
        "AdminServer": {
            "DependsOn": "ADMINSecurityGroup", 
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [
                        "AWSAMI", 
                        "Centos", 
                        "AMI"
                    ]
                }, 
                "InstanceType": "m3.medium", 
                "IamInstanceProfile": {
                   "Ref": "IamRole"
                },
                "KeyName": {
                    "Ref": "KeyName"
                }, 
                "SecurityGroupIds": [
                    {
                        "Ref": "ADMINSecurityGroup"
                    }
                ], 
                "SourceDestCheck": "false", 
                "SubnetId": {
                    "Ref": "PublicSubnetA"
                }, 
                "Tags": [
                    {
                        "Key": "Environment", 
                        "Value": "Ecommerce"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "PT"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "BASTION"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce Admin Bastion Server"
                    }
                ], 
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "\n", 
                            [
                                "#!/bin/bash", 
                                "/usr/sbin/groupadd -g 506 wmpecommdev", 
                                "/usr/sbin/useradd -g wmpecommdev -c \"Ecommerce Developer account\" wmpecommdev", 
                                "cd /home/wmpecommdev", 
                                "/bin/mkdir .ssh", 
                                "echo 'ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCvloyc5wTv3UBFzG+3KHnT4x0ZMXEjxZkKpW0R5IbD+7qRWjpbyQOhhf2rMe6yVZ+V0plHBDqiZTPXntnWhPfQ9hRxF9Flf1TW+PQPdxZzXpDsXg2Ep1onMFF6fBFv8SdaK5+tfrCh144eUyPriygXcSjyhGJ8Rlw4p24yt3tBAi8rRUUdO13JB50lMvm+mQPpFQF9fIjZAIolCdwVCIbXMDgbYctkhN9p07MfCcknLIYO6OixB7TQN6eZg9MDksuiWyOOq+KHfa71THtX1yyBR9CtZFSQLbpCGMTJHIpSKR4nPUdWvjT7V9bPYjvPZOUhKQe3YsdvM84oFDsDmMLL wmpecommdev@puppet.aws.internal' >.ssh/authorized_keys", 
                                "/bin/chown -R wmpecommdev:wmpecommdev .ssh", 
                                "/bin/chmod 700 .ssh", 
                                "/bin/chmod 600 .ssh/authorized_keys", 
                                "echo 'export JAVA_HOME=/usr/lib/jvm/jre' >>/root/.profile", 
                                "echo 'export HOME=/root' >>/root/.profile", 
                                ". /root/.profile", 
                                "/bin/mkdir /usr/java", 
                                "/bin/ln /usr/lib/jvm/jre /usr/java/default", 
                                "cd /tmp", 
                                "/usr/bin/curl \"https://bootstrap.pypa.io/get-pip.py\" -o \"get-pip.py\"", 
                                "/usr/bin/python get-pip.py", 
                                "/usr/bin/pip install awscli", 
                                "/bin/mkdir /root/.aws", 
                                "echo \"[default]\" >/root/.aws/credentials", 
                                "echo \"aws_access_key_id = AKIAJOTSLEWDNIASSXCQ\" >>/root/.aws/credentials", 
                                "echo \"aws_secret_access_key = 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\" >>/root/.aws/credentials", 
                                "echo \"[default]\" >>/root/.aws/config", 
                                "echo \"region = eu-west-1\" >>/root/.aws/config", 
                                "/usr/bin/aws s3 cp s3://cup-wmp-ecomm-files/er-management-test.pem /home/ec2-user/.ssh/er-management-test.pem", 
                                "/usr/bin/aws s3 cp s3://cup-wmp-ecomm-files/er-management-config /home/ec2-user/.ssh/config", 
                                "/bin/chown -R ec2-user:ec2-user /home/ec2-user/.ssh", 
                                "/bin/chmod 700 /home/ec2-user/.ssh", 
                                "/bin/chmod 600 /home/ec2-user/.ssh/*", 
                                "/usr/bin/aws s3 cp s3://cup-wmp-ecomm-files/wmpecommdev /home/wmpecommdev/.ssh/wmpecommdev.pem", 
                                "/usr/bin/aws s3 cp s3://cup-wmp-ecomm-files/wmpecommdev-config /home/wmpecommdev/.ssh/config", 
                                "/bin/chown -R wmpecommdev:wmpecommdev /home/wmpecommdev/.ssh", 
                                "/bin/chmod 700 /home/wmpecommdev/.ssh", 
                                "/bin/chmod 600 /home/wmpecommdev/.ssh/*", 
                                "exit"
                            ]
                        ]
                    }
                }
            }, 
            "Type": "AWS::EC2::Instance"
        }, 
        "GatewayAttachment": {
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                }, 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::VPCGatewayAttachment"
        }, 
        "InternetGateway": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": "Ecommerce"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "PT"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "IGW"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce Internet Gateway"
                    }
                ]
            }, 
            "Type": "AWS::EC2::InternetGateway"
        }, 
        "NATDevice": {
            "DependsOn": "NATSecurityGroup", 
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [
                        "AWSAMI", 
                        "NAT", 
                        "AMI"
                    ]
                }, 
                "InstanceType": "t1.micro", 
                "KeyName": {
                    "Ref": "KeyName"
                }, 
                "SecurityGroupIds": [
                    {
                        "Ref": "NATSecurityGroup"
                    }
                ], 
                "SourceDestCheck": "false", 
                "SubnetId": {
                    "Ref": "PublicSubnetA"
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": "Ecommerce"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "PT"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "NAT"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce NAT Device"
                    }
                ]
            }, 
            "Type": "AWS::EC2::Instance"
        }, 
        "NATIPAddress": {
            "DependsOn": "GatewayAttachment", 
            "Properties": {
                "Domain": "vpc", 
                "InstanceId": {
                    "Ref": "NATDevice"
                }
            }, 
            "Type": "AWS::EC2::EIP"
        }, 
        "NATSecurityGroup": {
            "Properties": {
                "GroupDescription": "Enable AWS VPC access to the NAT device", 
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0", 
                        "FromPort": "1", 
                        "IpProtocol": "-1", 
                        "ToPort": "9999"
                    }
                ], 
                "SecurityGroupIngress": [
                    {
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "SubnetConfig", 
                                "VPC", 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "1", 
                        "IpProtocol": "-1", 
                        "ToPort": "9999"
                    }
                ], 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": "Ecommerce"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "PT"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SG"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce NAT SG"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::SecurityGroup"
        }, 
        "PrivateRoute": {
            "DependsOn": "NATDevice", 
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0", 
                "InstanceId": {
                    "Ref": "NATDevice"
                }, 
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                }
            }, 
            "Type": "AWS::EC2::Route"
        }, 
        "PrivateRouteTable": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": "Ecommerce"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "PT"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "RT"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce Private routing table"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::RouteTable"
        }, 
        "PrivateSubnetA": {
            "Properties": {
                "AvailabilityZone": "eu-west-1a", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig", 
                        "PrivateA", 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": "Ecommerce"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "PT"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SN"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce App Subnet AZ A (Private)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "PrivateSubnetB": {
            "Properties": {
                "AvailabilityZone": "eu-west-1b", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig", 
                        "PrivateB", 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": "Ecommerce"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "PT"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SN"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce App Subnet AZ B (Private)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "PrivateSubnetC": {
            "Properties": {
                "AvailabilityZone": "eu-west-1a", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig", 
                        "PrivateC", 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": "Ecommerce"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "PT"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SN"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce DB Subnet AZ A (Private)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "PrivateSubnetD": {
            "Properties": {
                "AvailabilityZone": "eu-west-1b", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig", 
                        "PrivateD", 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": "Ecommerce"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "PT"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SN"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce DB Subnet AZ B (Private)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "PublicRoute": {
            "DependsOn": "GatewayAttachment", 
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0", 
                "GatewayId": {
                    "Ref": "InternetGateway"
                }, 
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            }, 
            "Type": "AWS::EC2::Route"
        }, 
        "PublicRouteTable": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": "Ecommerce"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "PT"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "RT"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce Public routing table"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::RouteTable"
        }, 
        "PublicSubnetA": {
            "Properties": {
                "AvailabilityZone": "eu-west-1a", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig", 
                        "PublicA", 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": "Ecommerce"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "PT"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SN"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce Web Subnet AZ A (Public)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "PublicSubnetB": {
            "Properties": {
                "AvailabilityZone": "eu-west-1b", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig", 
                        "PublicB", 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": "Ecommerce"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "PT"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SN"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce Web Subnet AZ B (Public)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "SubnetRouteTableAssociationPrivA": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                }, 
                "SubnetId": {
                    "Ref": "PrivateSubnetA"
                }
            }, 
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }, 
        "SubnetRouteTableAssociationPrivB": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                }, 
                "SubnetId": {
                    "Ref": "PrivateSubnetB"
                }
            }, 
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }, 
        "SubnetRouteTableAssociationPubA": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }, 
                "SubnetId": {
                    "Ref": "PublicSubnetA"
                }
            }, 
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }, 
        "SubnetRouteTableAssociationPubB": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }, 
                "SubnetId": {
                    "Ref": "PublicSubnetB"
                }
            }, 
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }, 
        "VPC": {
            "Properties": {
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "SubnetConfig", 
                        "VPC", 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": "Ecommerce"
                    }, 
                    {
                        "Key": "Cluster", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "PT"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce VPC"
                    }
                ]
            }, 
            "Type": "AWS::EC2::VPC"
        }
    }
}
